--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>البحث واستبدال الأكواد</title>
+  <title>البحث واستبدال اكواد جهة التمويل</title>
   <style>
     body {
       font-family: 'Tajawal', Arial, sans-serif;
@@ -78,10 +78,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>البحث واستبدال الأكواد</h1>
+    <h1>البحث واستبدال كود جهات التمويل</h1>
 
     <!-- جزء الاستبدال -->
-    <h3>📝 استبدال الأكواد بأسماء</h3>
+    <h3>📝 استبدال اكواد جهات التمويل بأسماء</h3>
     <textarea id="inputBox" placeholder="مثال: CB13000001 CB14000001"></textarea>
     <div class="buttons">
       <button onclick="replaceCodes()">استبدال</button>
@@ -93,8 +93,8 @@
     <hr>
 
     <!-- جزء البحث -->
-    <h3>🔍 البحث عن الأكواد والجهات</h3>
-    <input type="text" id="codeSearch" placeholder="ابحث بجزء من الكود...">
+    <h3>🔍 البحث عن كود جهة التمويل و اسماء الجهات</h3>
+    <input type="text" id="codeSearch" placeholder="ابحث بجزء من كود جهة التمويل...">
     <input type="text" id="nameSearch" placeholder="ابحث بجزء من الاسم...">
     <ul id="results" class="results-list"></ul>
     <p id="noResultsText" style="display:none; text-align:center; color:#888;">لا توجد نتائج.</p>
